--- a/css/semicolon-box.css
+++ b/css/semicolon-box.css
@@ -10,11 +10,15 @@
 }
 .main_box > h1 {
   color: #CC3D3D;
+
+  font-weight: bold;
+
+  font-size: 2.6rem;
 }
 
 /*title*/
 .main_box > h1:first-child {
-  margin-bottom: 3em;
+  margin-bottom: 2.8em;
 }
 
 .main_box#intro {
@@ -91,7 +95,8 @@
 
   border-radius: 3px;
 
-  background-color: #3A3E4A;
+  /*background-color: #3A3E4A;*/
+  background-color: rgba(58,62,74, 0.3);
 
   transition-duration: 0.2s;
 }
