join페이지 수정

--- a/css/semicolon-box.css
+++ b/css/semicolon-box.css
@@ -100,6 +100,9 @@
 
   transition-duration: 0.2s;
 }
+.team-profile-teamlogoitem {
+  width: 428px;
+}
 .team-profile-item:hover {
   transform: scale(1.05);
 
