--- a/css/semicolon-box.css
+++ b/css/semicolon-box.css
@@ -100,8 +100,15 @@
 
   transition-duration: 0.2s;
 }
-.team-profile-teamlogoitem {
-  width: 428px;
+@media all and (min-width: 500px) {
+  .team-profile-teamlogoitem {
+    width: 428px;
+  }
+}
+@media all and (max-width: 500px){
+  .team-profile-teamlogoitem {
+    width: 214px;
+  }
 }
 .team-profile-item:hover {
   transform: scale(1.05);
