--- a/css/semicolon-navbar.css
+++ b/css/semicolon-navbar.css
@@ -1,30 +1,30 @@
 .navbar {
-  background-color: rgba(0,0,0, 0.0);
+  background-color: #F6F6F6;
+  padding-bottom: 0;
 }
 .navbar-inverse .navbar-brand {
   color: #FFF;
 
+  background-color: #03a9f4;
+
+  font-size: 1.2em;
+
   transition-duration: 0.4s;
 }
+/*brand만 css에서 hover 처리*/
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #CC3D3D;
+  color: #03a9f4;
+
+  background-color: #FFF;
+
+  font-size: 1.2em;
 
   transition-duration: 0.4s;
 }
 
 .navbar-menu > * {
-  color: #FFF;
+  color: #2E2E2E;
   padding: 5px;
   transition-duration: 0.5s;
-}
-.navbar-menu:hover > * {
-  color: #CC3D3D;
-  transition-duration: 0.4s;
-}
-
-.navbar-brand:active > *,
-.navbar-menu:active > * {
-  color: #A81919;
-  transition-duration: 0.2s
 }
